# WojSur_Masters_Deg

./: Makefile  Makefile.bak  README  README.md  USER_CONFIG.h  WojSurMag.c  aneks.tex  beginning.tex  ending.tex  introduction.tex  magisterka.ino  makefile  makefile.conf  praca.tex  projekt.tex  wyniki.tex
code_source/: XML.xml
code_source/arduino/: final.cpp  monocanal_rst.cpp
code_source/asembler/: Loop_final.S
controler_side/: ENV_CONFIG.h  USER_CONFIG.h  controler_side.ino  magisterka.ino
fig/raw/: Elektronika_flow_chart_new.dia  RXHDR_shaper.xcf  Schemat_zapotrzebowania.xcf  licznik_tabela_prawdy.xcf  overwiew_project.graphml
fig/wykresy/generacja/: liniowosc rts.csv  rts.gn
include/: sam3x8h.h
pc_side/: back_end.py  comunication.py  main.py  requirements.txt
pc_side/backend_module/: back_end.py  comunication.py  configuration.py
pc_side/gui/: Makefile  counter.ui  gui.py  my_gui_setup.py
pc_side/gui_module/: Makefile  configuration.py  counter.ui  fig.py  gui.py  my_gui_setup.py  resorce_rc.py  serialInfo.py  test.py
pc_side/gui_module/desiner_resorces/: counter.ui  resorce.qrc
plan/: plan.tex
src/: WojSurMag-CM3.axf  multi-ram.ld
