set terminal jpeg enhanced size 900,600
set output '../rts.jpg'
set multiplot layout 2,1 title 'Wyniki rozwiązania z zastosowaniem przerwań systemowych'
set ylabel 'Liczba zliczeń * 1000'
set xlabel 'Częstotliwość generatora [KHz]'
filename = 'liniowosc rts.csv'
set decimalsign '.'
set datafile separator ','
set grid    
set key left

plot filename u 1:($2/1000) pt 7 ps 2 title 'Estymowana liczba zliczeń', filename u 1:($3/1000) pt 1 ps 3 title 'otrzymana liczba zliczeń'
set ylabel 'Prawdopodobieństwo'

set y2label 'Różnica w zliczeniach [-]' tc lt 1
set y2tics 50 nomirror tc lt 1

set ytics 0.1 nomirror tc lt 2
set ylabel "Błąd względny [%]" tc lt 2

set logscale x

set key off

plot filename u 1:((abs($2-$3)/$2)*100) title 'Błąd względny' lc 2 axes x1y1, filename u 1:(abs($2-$3)) title 'Błąd bezwzględny' axes x1y2 lc 1
